confik-macros/tests/trybuild/fail-from-and-try_from.stderr
error: Cannot support both `try_from` and `from` confik attributes
 --> tests/trybuild/fail-from-and-try_from.rs:6:25
  |
6 |     #[confik(try_from = A, from = B)]
  |                         ^

error: Cannot support both `try_from` and `from` confik attributes
 --> tests/trybuild/fail-from-and-try_from.rs:6:35
  |
6 |     #[confik(try_from = A, from = B)]
  |                                   ^

error[E0599]: no function or associated item named `builder` found for struct `Config` in the current scope
  --> tests/trybuild/fail-from-and-try_from.rs:42:26
   |
5  | struct Config {
   | ------------- function or associated item `builder` not found for this struct
...
42 |     let config = Config::builder()
   |                          ^^^^^^^ function or associated item not found in `Config`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `builder`, perhaps you need to implement it:
           candidate #1: `Configuration`
